<resources>
    <string name="app_name">My Navigation Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="narenda_wicaksono">Narenda Wicaksono</string>
    <string name="narenda_dicoding_com">narenda@dicoding.com</string>
    <string name="communication">Communication</string>
    <string name="maps">Maps</string>
    <string name="hotel">Hotel</string>
    <string name="subway">Subway</string>
    <string name="menu_cart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_cart_fragment">This is cart Fragment</string>
    <string name="this_is_subway_activity">This is subway Activity</string>
    <string name="textview">TextView</string>
</resources>