<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_cart"
            android:title="@string/menu_cart"
            android:icon="@drawable/ic_menu_cart"/>
    </group>

    <item android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/nav_maps"
                android:title="@string/maps"
                android:icon="@drawable/ic_menu_map"/>
            <item
                android:id="@+id/nav_hotel"
                android:title="@string/hotel"
                android:icon="@drawable/ic_menu_hotel"/>
            <item
                android:id="@+id/nav_subway"
                android:title="@string/subway"
                android:icon="@drawable/ic_menu_subway"/>
        </menu>
    </item>
</menu>